# simula-matrix-framework-rust

./: .gitignore  3by3.tex  4by4.tex  5by5.tex  Cargo.toml  README.md  latin_square_3.tex  latin_square_3_new.tex  latin_square_4.tex  latin_square_5.tex  main.tex  test.tex
data/all/: 2.json  3.json  4.json  5.json  6.json  7.json  8.json
data/sudocurity/: 2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
spreadsheets/: complete_3.ods  complete_4.ods  summary_3.ods  summary_4.ods  summary_5.ods
src/: abelian.rs  affine_automorphism_table.rs  common.rs  experiments.rs  latin_square.rs  main.rs  obsolete.rs  spreadsheet.rs  structs.rs  table.rs  traits.rs  unit_tests.rs
src/abelian/: legacy_abelian.rs
src/experiments/: abelian.rs  latin_square.rs
src/latin_square/: bits.rs  permutation.rs  sidedness.rs
src/obsolete/: abelian.rs  affine_automorphism_table.rs  experiments.rs  unit_tests.rs
src/obsolete/abelian/: legacy_abelian.rs
src/obsolete/experiments/: abelian.rs  affine_automorphism.rs  latin_square.rs
src/structs/: bits.rs  latin_square.rs  latin_square_classification.rs  latin_structure.rs  latin_type.rs  permutation.rs  permutation_information.rs  sidedness.rs  spreadsheet_colors.rs  square_information.rs  table.rs  traits.rs
src/structs/latin_square/: partial_latin_square.rs
src/structs/traits/: latex.rs  spreadsheet_display.rs
test/: example.ods
