[package]
name = "simula-matrix-framework-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-rs = "0.7.1"
icu_locid = "1.2.0"
indicatif = "0.17.5"
serde_json = "1.0.99"
spreadsheet-ods = "0.15.0"
